# GXLib

./: .codex_all_sources.txt  .codex_todo_hits.txt  .gitignore  BugReport.md  CMakeLists.txt  Doxyfile  Phase1_Summary.md  Phase2_Summary.md  Phase4a_Summary.md  Phase4b_Summary.md  Phase4cde_Summary.md  Phase4j_Summary.md  ProjectAnalyze_2026-02-11.md  ProjectAnalyze_2026-02-21.md  README.md  build.bat
Framework/: CMakeLists.txt  README.md
Framework/Assets/Models/: Character.fbx
Framework/src/: FrameworkApp.cpp  FrameworkApp.h  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  Scene.h  SceneManager.cpp  SceneManager.h  main.cpp
Framework/src/scenes/: BootScene.cpp  BootScene.h  SkinnedMeshScene.cpp  SkinnedMeshScene.h
GXLib/: CMakeLists.txt  GXEasy.h  GXLib.h  pch.cpp  pch.h
GXLib/AI/: NavAgent.cpp  NavAgent.h  NavMesh.cpp  NavMesh.h
GXLib/Audio/: AudioBus.cpp  AudioBus.h  AudioDevice.cpp  AudioDevice.h  AudioEmitter.cpp  AudioEmitter.h  AudioListener.cpp  AudioListener.h  AudioManager.cpp  AudioManager.h  AudioMixer.cpp  AudioMixer.h  MusicPlayer.cpp  MusicPlayer.h  Sound.cpp  Sound.h  SoundPlayer.cpp  SoundPlayer.h
GXLib/Compat/: CompatContext.cpp  CompatContext.h  CompatTypes.h  Compat_2D.cpp  Compat_3D.cpp  Compat_Font.cpp  Compat_Input.cpp  Compat_Math.cpp  Compat_Particle.cpp  Compat_Sound.cpp  Compat_System.cpp  GXEasy.cpp  GXEasy.h  GXLib.h
GXLib/Core/: Application.cpp  Application.h  FrameAllocator.h  Logger.cpp  Logger.h  PoolAllocator.h  ProfilerOverlay.cpp  ProfilerOverlay.h  Timer.cpp  Timer.h  Window.cpp  Window.h
GXLib/Core/Scene/: Component.h  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h
GXLib/GUI/: GUILoader.cpp  GUILoader.h  Style.h  StyleSheet.cpp  StyleSheet.h  UIContext.cpp  UIContext.h  UIRenderer.cpp  UIRenderer.h  Widget.cpp  Widget.h  XMLParser.cpp  XMLParser.h
GXLib/GUI/Widgets/: Button.cpp  Button.h  Canvas.cpp  Canvas.h  CheckBox.cpp  CheckBox.h  Dialog.cpp  Dialog.h  DropDown.cpp  DropDown.h  Image.cpp  Image.h  ListView.cpp  ListView.h  Panel.cpp  Panel.h  ProgressBar.cpp  ProgressBar.h  RadioButton.cpp  RadioButton.h  ScrollView.cpp  ScrollView.h  Slider.cpp  Slider.h  Spacer.cpp  Spacer.h  TabView.cpp  TabView.h  TextInput.cpp  TextInput.h  TextWidget.cpp  TextWidget.h
GXLib/Graphics/3D/: AnimationClip.cpp  AnimationClip.h  AnimationPlayer.cpp  AnimationPlayer.h  Animator.cpp  Animator.h  AnimatorStateMachine.cpp  AnimatorStateMachine.h  BlendStack.cpp  BlendStack.h  BlendTree.cpp  BlendTree.h  Camera3D.cpp  Camera3D.h  CascadedShadowMap.cpp  CascadedShadowMap.h  Decal.cpp  Decal.h  Fog.h  FootIK.cpp  FootIK.h  GPUParticleSystem.cpp  GPUParticleSystem.h  GxmdModelLoader.cpp  GxmdModelLoader.h  Humanoid.cpp  Humanoid.h  IBL.cpp  IBL.h  IKSolver.cpp  IKSolver.h  InstanceBuffer.cpp  InstanceBuffer.h  LODGroup.cpp  LODGroup.h  Light.cpp  Light.h  LookAtIK.cpp  LookAtIK.h  Material.cpp  (+35 more)
GXLib/Graphics/Device/: BarrierBatch.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  DescriptorHeap.cpp  DescriptorHeap.h  Fence.cpp  Fence.h  GPUProfiler.cpp  GPUProfiler.h  GraphicsDevice.cpp  GraphicsDevice.h  SwapChain.cpp  SwapChain.h
GXLib/Graphics/Layer/: LayerCompositor.cpp  LayerCompositor.h  LayerStack.cpp  LayerStack.h  MaskScreen.cpp  MaskScreen.h  RenderLayer.cpp  RenderLayer.h
GXLib/Graphics/Pipeline/: PipelineState.cpp  PipelineState.h  RootSignature.cpp  RootSignature.h  Shader.cpp  Shader.h  ShaderHotReload.cpp  ShaderHotReload.h  ShaderLibrary.cpp  ShaderLibrary.h
GXLib/IO/: Archive.cpp  Archive.h  ArchiveFileProvider.cpp  ArchiveFileProvider.h  AsyncLoader.cpp  AsyncLoader.h  Crypto.cpp  Crypto.h  FileSystem.cpp  FileSystem.h  FileWatcher.cpp  FileWatcher.h  PakFileProvider.cpp  PakFileProvider.h  PhysicalFileProvider.cpp  PhysicalFileProvider.h
GXLib/Input/: ActionMapping.cpp  ActionMapping.h  Gamepad.cpp  Gamepad.h  InputManager.cpp  InputManager.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
GXLib/Math/: Color.h  MathUtil.h  Matrix4x4.h  Quaternion.h  Random.cpp  Random.h  Spline.cpp  Spline.h  Transform2D.h  Vector2.h  Vector3.h  Vector4.h
GXLib/Movie/: MoviePlayer.cpp  MoviePlayer.h
GXLib/Physics/: MeshCollider.cpp  MeshCollider.h  PhysicsShape.h  PhysicsWorld2D.cpp  PhysicsWorld2D.h  PhysicsWorld3D.cpp  PhysicsWorld3D.h  RigidBody2D.h  RigidBody3D.h
GXModelViewer/: CMakeLists.txt  GXModelViewerApp.cpp  GXModelViewerApp.h  InfiniteGrid.cpp  InfiniteGrid.h  ModelExporter.cpp  ModelExporter.h  main.cpp
GXModelViewer/Panels/: AnimatorPanel.cpp  AnimatorPanel.h  AssetBrowserPanel.cpp  AssetBrowserPanel.h  AudioPanel.cpp  AudioPanel.h  BlendTreeEditor.cpp  BlendTreeEditor.h  IBLPanel.cpp  IBLPanel.h  IKPanel.cpp  IKPanel.h  LightingPanel.cpp  LightingPanel.h  LogPanel.cpp  LogPanel.h  ModelInfoPanel.cpp  ModelInfoPanel.h  ParticlePanel.cpp  ParticlePanel.h  PerformancePanel.cpp  PerformancePanel.h  PostEffectPanel.cpp  PostEffectPanel.h  PropertyPanel.cpp  PropertyPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SkeletonPanel.cpp  SkeletonPanel.h  SkyboxPanel.cpp  SkyboxPanel.h  TerrainPanel.cpp  TerrainPanel.h  TextureBrowser.cpp  TextureBrowser.h  TimelinePanel.cpp  TimelinePanel.h
GXModelViewer/Scene/: EditorMetadata.h  SceneGraph.cpp  SceneGraph.h  SceneSerializer.cpp  SceneSerializer.h
Sandbox/: CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt  test_Allocator.cpp  test_Collision2D.cpp  test_Collision3D.cpp  test_Color.cpp  test_Crypto.cpp  test_MathUtil.cpp  test_Matrix.cpp  test_Quaternion.cpp  test_Spatial.cpp  test_Vector.cpp  test_main.cpp
gxconv/: CMakeLists.txt  converter.cpp  converter.h  main.cpp
gxconv/exporters/: gxan_exporter.cpp  gxan_exporter.h  gxmd_exporter.cpp  gxmd_exporter.h
gxconv/importers/: fbx_importer.cpp  fbx_importer.h  gltf_importer.cpp  gltf_importer.h  obj_importer.cpp  obj_importer.h
gxloader/: CMakeLists.txt  anim_loader.cpp  anim_loader.h  bone_matcher.cpp  bone_matcher.h  model_loader.cpp  model_loader.h  pak_loader.cpp  pak_loader.h
gxpak/: CMakeLists.txt  main.cpp
(+232 files in other folders)
